<resources>
    <string name="app_name">Couchsurfing</string>
    <string name="userName">UserName</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="alreadyHave">Alreadu have an Account?</string>
    <string name="signIn">Sign in</string>
    <string name="notHaveAcount">Don\'t have and account?</string>
    <string name="status">be your own boss</string>
    <string name="sendFreindReq">Send Request</string>
    <string name="sendMessage">Send Message</string>
    <string name="editProfile">Edit Profile</string>
    <string name="changeprofile">Change Profile</string>
    <string name="saveChanges">Save Changes</string>
    <string name="typeSomething">Type Something...</string>
    <string name="dummyMessage">Hello, how are you?</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="password">Password ( min 6 characters)</string>
    <string name="friendrequests">Freind Requests</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="cancelRequest">Cancel request</string>
    <string name="unFriend">UnFriend</string>
    <string name="accept">Accept </string>
    <string name="time">Dummy time</string>
    <string name="firendsList">Friends List</string>
    <string name="delete">Delete</string>
    <string name="id_verification_action_title">Verify your government ID</string>
    <string name="id_verification_completed_address_finish_step_description">You have successfully captured your government ID. We will let you know once we have processed it.</string>
    <string name="id_verification_completed_finish_step_action">Done</string>
    <string name="id_verification_completed_screen_title">Verification</string>
    <string name="id_verification_completed_title">Government ID processing</string>
    <string name="id_verification_description">First, we\'ll have you take a photo of your driver\'s license, passport, or national ID card. Then, you\'ll take a selfie to confirm it\'s your ID.</string>
    <string name="id_verification_description_unsupported_device">A device camera is required in order to verify your government id.</string>
    <string name="id_verification_failed">ID verification failed</string>
    <string name="id_verification_screen_title">Verify your ID</string>
    <string name="id_verification_submit_error">Error processing your documents</string>
    <string name="id_verification_submit_progress_text">Sending…</string>
    <string name="id_verification_verify_button">Verify</string>
    <string name="id_verification_verify_button_unsupported">Unsupported device</string>
    <string name="phone_verification_code_entry_action_title">Enter Code</string>
    <string name="phone_verification_code_entry_description">Please enter the confirmation code from the SMS we just sent to your phone.</string>
    <string name="phone_verification_code_entry_edit_text_hint">######</string>
    <string name="phone_verification_code_entry_screen_title">Verify your phone</string>
    <string name="phone_verification_code_entry_submit_already_verified_error">You are already verified</string>
    <string name="phone_verification_code_entry_submit_error">Error validating SMS code</string>
    <string name="phone_verification_code_entry_submit_invalid_code_error">The code you entered is invalid</string>
    <string name="phone_verification_code_entry_submit_progress_text">Validating Code…</string>
    <string name="phone_verification_code_entry_try_later">Try again later</string>
    <string name="phone_verification_code_entry_verify_button">Verify</string>
    <string name="phone_verification_completed_address_finish_step_description">Your phone number is verified.</string>
    <string name="phone_verification_completed_finish_step_action">Done</string>
    <string name="phone_verification_completed_finish_step_action_verify_id">Verify your ID</string>
    <string name="phone_verification_completed_screen_title">Phone Verified</string>
    <string name="phone_verification_completed_title">Phone Verified</string>
    <string name="phone_verification_entry_action_title">Enter Phone Number</string>
    <string name="phone_verification_entry_description">Enter your mobile phone number with country code, and we\'ll text you a confirmation code.</string>
    <string name="phone_verification_entry_dial_code_unknown">Unknown country code</string>
    <string name="phone_verification_entry_loading_failed">Loading data failed.</string>
    <string name="phone_verification_entry_phone_number_hint">Phone Number</string>
    <string name="phone_verification_entry_safety_note">Private - will not be shared</string>
    <string name="phone_verification_entry_screen_title">Verify your phone</string>
    <string name="phone_verification_entry_select_country">Select Country</string>
    <string name="phone_verification_entry_send_button">Send</string>
    <string name="phone_verification_entry_submit_already_verified_error">You are already verified</string>
    <string name="phone_verification_entry_submit_error">Error sending SMS</string>
    <string name="phone_verification_entry_submit_invalid_phone_error">The phone number you entered is invalid</string>
    <string name="phone_verification_entry_submit_progress_text">Sending SMS…</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_type">com.couchsurfing</string>
    <string name="action_add">Add</string>
    <string name="action_apply">Apply</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_contact">Contact</string>
    <string name="action_create_shortcut">Create Shortcut</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_leave">Leave</string>
    <string name="action_next">Next</string>
    <string name="action_post">Post</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_report">Report</string>
    <string name="action_retry">Retry</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_share">Share</string>
    <string name="action_submit">Submit</string>
    <string name="action_unfriend">Unfriend</string>
    <string name="action_view">View</string>
    <string name="ad_attribution">Ad</string>
    <string name="album_not_found">This album no longer exists.</string>
    <string name="albums_create_error">Unable to create album</string>
    <string name="albums_create_loading">Creating Album…</string>
    <string name="albums_create_name">Album name</string>
    <string name="albums_create_success">Album was created</string>
    <string name="albums_loading_failed">Error loading albums</string>
    <string name="albums_title">Photos</string>
    <string name="amp_label_copied">Copied To Clipboard</string>
    <string name="amp_label_copy">Copy</string>
    <string name="amp_label_device_id">DEVICE ID</string>
    <string name="amp_label_not_avail">N/A</string>
    <string name="amp_label_user_id">USER ID</string>
    <string name="amp_label_user_info">User Information</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authenticator_add_not_supported">Only one Couchsurfing account is supported.</string>
    <string name="bookmark_menu">Bookmark</string>
    <string name="bookmarking_user_complete">Saved to Bookmarks.</string>
    <string name="bookmarks_empty_title">You don\'t have any bookmarks</string>
    <string name="bookmarks_error_loading">Error loading bookmarks.</string>
    <string name="bookmarks_remove_button_label">Unbookmark</string>
    <string name="bookmarks_screen_title">Bookmarks</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bullet">•</string>
    <string name="card_content_descriptor">card</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">e7afaf4cd31b400e90584d26bf23aadc</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
</resources>