<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignIn">

    <Button
        android:id="@+id/btnSignSI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_PasswrodSI"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:text="@string/signIn"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edt_UserEmailSI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_userNameSI"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edt_PasswrodSI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_UserEmailSI"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edt_userNameSI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgSignIN"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:hint="@string/userName"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignSI"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/alreadyHave" />

        <TextView
            android:id="@+id/tvLoginSI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgSignIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_chatsapp" />

</RelativeLayout>