<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <Button
        android:id="@+id/btnEditProfileE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgUserProfile"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@color/trans"
        android:text="@string/editProfile"
        android:textColor="@color/black"
        android:textSize="9sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lytUserAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserStatus"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="4">

        <Button
            android:id="@+id/btnSendReqProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@color/design_default_color_primary"
            android:text="@string/sendFreindReq" />
        <Button
            android:id="@+id/btnAcceptRequestProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@color/design_default_color_primary"
            android:text="@string/accept" />
        <Button
            android:id="@+id/btnUnFriendProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@color/design_default_color_primary"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btnCancelReqProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@color/design_default_color_on_primary"
            android:text="@string/cancelRequest"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSendMessageProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@color/trans"
            android:text="@string/sendMessage"
            android:textColor="@color/black" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFrequest">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listConfirmFriends"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:padding="10dp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listFriends"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvFrequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lytUserAction"
        android:text="@string/firendsList"
        android:paddingLeft="20dp"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvUserNAme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEditProfileE"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/userName"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/tvUserStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserNAme"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/userName"
        android:textColor="@color/teal_200"
        android:textSize="13sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgUserProfile"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_chatsapp" />
</RelativeLayout>