<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".EditProfile">
    <Button
        android:id="@+id/btnEditPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgUserProfileEditProfile"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@color/trans"
        android:text="@string/changeprofile"
        android:textColor="@color/black"
        android:textSize="9sp" />

    <EditText
        android:id="@+id/edt_userNameEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEditPic"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/userName"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_userNameEP"
        android:id="@+id/edt_UserStatusEP"
        android:text="@string/status"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgUserProfileEditProfile"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_chatsapp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/edt_UserStatusEP"
        android:layout_weight="2"
        android:background="@color/black"
        android:id="@+id/btnSaveChangesEP"
        android:layout_centerHorizontal="true"
        android:text="@string/saveChanges" />
</RelativeLayout>