<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:padding="5dp"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/userReqImageList"
            android:src="@drawable/ic_chatsapp"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserSentReq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLength="20"
                android:text="@string/userName"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:id="@+id/timeSent"
                android:text="@string/time"
                android:textColor="@color/teal_200"
                android:textSize="13sp" />
        </LinearLayout>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:id="@+id/btnAcceptReq"
    android:textSize="9sp"
    android:layout_gravity="center"
    android:text="@string/accept"/>
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
            android:textSize="9sp"
        android:id="@+id/btnDeleteReq"
        android:layout_gravity="center"
            android:textColor="@color/black"
            android:background="@color/trans"
        android:text="@string/delete"/>
    </LinearLayout>


</LinearLayout>