<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".ChattingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/lytMessageTyingPad"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="10">

        <EditText
            android:id="@+id/edtTypeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/typeSomething" />

        <ImageButton
            android:id="@+id/btnSendMessage"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@color/trans"
            android:padding="5dp"
            android:src="@drawable/ic_send" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lytUserInfo"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lytUserDetailsC"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imgUserImgChat"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:id="@+id/tvUserInfoChat"
                android:text="@string/userName"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:id="@+id/tvUserStatusChat"
                android:text="@string/status"
                android:textColor="@color/teal_200"
                android:textSize="13sp" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/imgUserImgChat"
            android:layout_margin="5dp"

            android:src="@drawable/ic_chatsapp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/lytMessages"
        android:layout_above="@+id/lytMessageTyingPad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lytUserInfo"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listMessages"
                tools:listitem="@layout/item_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>